--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "gh-pages": "^2.1.1"
   },
   "scripts": {
+    "build": "yarn run webpack -p",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d dist"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.6"
   }
 }
