--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6"
