--- a/static/assets/webmanifest.json
+++ b/static/assets/webmanifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Plain Hardware",
+    "name": "PLHW",
     "short_name": "Plain Hardware",
     "icons": [{
         "src": "/static/assets/android-chrome-192x192.png",
