--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,7 @@
 {
-    "name": "PLHW",
+    "name": "Plain Hardware",
     "short_name": "Plain Hardware",
+    "start_url": "./index.html",
     "icons": [{
         "src": "/static/assets/android-chrome-192x192.png",
         "sizes": "192x192",
