--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.4",
+    "create-file-webpack": "^1.0.2",
     "css-loader": "^3.2.0",
+    "dotenv": "^8.1.0",
+    "dotenv-webpack": "^1.7.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
