--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,1 @@
-{
-    "name": "Plain Hardware",
-    "short_name": "Plain Hardware",
-    "start_url": "./index.html",
-    "icons": [{
-        "src": "/static/assets/android-chrome-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-    }, {
-        "src": "/static/assets/android-chrome-512x512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-    }],
-    "theme_color": "#ffffff",
-    "background_color": "#ffffff",
-    "display": "standalone"
-}
+{"start_url":"./index.html","icons":[{"src":"/static/assets/android-chrome-192x192.png","sizes":"192x192","type":"image/png"},{"src":"/static/assets/android-chrome-512x512.png","sizes":"512x512","type":"image/png"}],"theme_color":"#ffffff","background_color":"#ffffff","display":"standalone","name":"Plain Hardware hobby and electronics store","short_name":"Plain Hardware"}
