--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Jonathan Abrahams",
   "license": "ISC",
   "dependencies": {
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^2.1.1",
+    "normalize-scss": "^7.0.1"
   },
   "scripts": {
     "build": "yarn run webpack -p",
@@ -17,18 +18,21 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.4",
     "create-file-webpack": "^1.0.2",
     "css-loader": "^3.2.0",
+    "cssnano": "^4.1.10",
     "dotenv": "^8.1.0",
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "sass": "^1.22.10",
     "sass-loader": "^7.2.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.2",
