--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Jonathan Abrahams",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.3.2",
     "gh-pages": "^2.1.1",
     "normalize-scss": "^7.0.1"
   },
