--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,18 @@
 {
+  "plugins": [
+      ["babel-plugin-import",{
+        "libraryName": "@material-ui/core",
+        "libraryDirectory": "esm",
+        "camel2DashComponentName": false
+      }],
+      ["babel-plugin-import",{
+          "libraryName": "@material-ui/icons",
+          "libraryDirectory": "esm",
+          "camel2DashComponentName": false
+        },
+        "icons"
+      ]
+  ],
   "presets": [
     "@babel/preset-env",
     "@babel/preset-react"
