--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.12.0",
     "copy-webpack-plugin": "^5.0.4",
     "create-file-webpack": "^1.0.2",
     "css-loader": "^3.2.0",
