--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass-loader": "^7.2.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.6"
+    "webpack-cli": "^3.3.6",
+    "webpack-subresource-integrity": "^1.3.2"
   }
 }
