--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.9.0",
     "sass": "^1.22.10",
     "sass-loader": "^7.2.0",
+    "script-ext-html-webpack-plugin": "^2.1.4",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6",
