--- a/config/firebase.json
+++ b/config/firebase.json
@@ -1,8 +1,8 @@
 {
-    "apiKey": "AIzaSyA91JVTqR91yhKe5F386NQt_r7D3X3l_18",
-    "databaseURL": "https://plain-hardware.firebaseio.com",
-    "storageBucket": "plain-hardware.appspot.com",
-    "authDomain": "plain-hardware.firebaseapp.com",
-    "messagingSenderId": "524339526113",
-    "projectId": "plain-hardware"
+    "apiKey": "---SECRET-AP-KEY---",
+    "databaseURL": "https://example.firebaseio.com",
+    "storageBucket": "exampe.appspot.com",
+    "authDomain": "example.firebaseapp.com",
+    "messagingSenderId": "123456789",
+    "projectId": "example"
 }
