--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^8.1.0",
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^4.2.0",
+    "firebase": "^6.6.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
