--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "homepage": "https://www.plain-hardware.co.za",
   "author": "Jonathan Abrahams",
   "license": "ISC",
-  "dependencies": {
-    "gh-pages": "^2.1.1",
-    "normalize-scss": "^7.0.1"
-  },
+  "dependencies": {},
   "scripts": {
     "build": "yarn run webpack -p",
     "predeploy": "yarn run build",
@@ -30,6 +27,7 @@
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^4.2.0",
     "firebase": "^6.6.1",
+    "gh-pages": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
@@ -41,6 +39,7 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6",
+    "webpack-livereload-plugin": "^2.2.0",
     "webpack-subresource-integrity": "^1.3.2"
   }
 }
